fix: align contact heading to `left` (#365)

--- a/modules/Layout/Contacts/Contacts.module.scss
+++ b/modules/Layout/Contacts/Contacts.module.scss
@@ -11,7 +11,7 @@
     @include heading-1;
 
     margin: 0 auto $spacing-6;
-    text-align: center;
+    text-align: left;
     color: $color-base-700;
 }
 
